[workspace]
resolver = "2"
members = ["lc-framework-sys"]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/lc-framework-rs"
rust-version = "1.85"  # keep in sync with bindgen MSRV

[workspace.dependencies]
# workspace-internal crates
lc-framework = { version = "0.1", path = ".", default-features = false }
lc-framework-sys = { version = "0.1", path = "lc-framework-sys", default-features = false }

# crates.io third-party dependencies
anyhow = { version = "1.0.93", default-features = false }
bindgen = { version = "0.71", default-features = false }
libc = { version = "0.2.39", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[package]
name = "lc-framework"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

description = "High-level Rust bindings to the LC compression framework"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "compression", "encoding"]

[dependencies]
libc = { workspace = true }
lc-framework-sys = { workspace = true }
thiserror = { workspace = true }
