[workspace]
resolver = "2"
members = ["lc-framework-src", "lc-framework-sys"]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/lc-framework-rs"
rust-version = "1.85"  # keep in sync with bindgen MSRV

[workspace.dependencies]
# workspace-internal crates
lc-framework = { version = "0.1", path = ".", default-features = false }
lc-framework-src = { version = "0.1", path = "lc-framework-src", default-features = false }
lc-framework-sys = { version = "0.1", path = "lc-framework-sys", default-features = false }

# crates.io third-party dependencies
bindgen = { version = "0.72", default-features = false }
cc = { version = "1.2", default-features = false }
fs_extra = { version = "1.3.0", default-features = false }

[package]
name = "lc-framework"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

description = "High-level Rust bindings to the LC compression framework"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "compression", "encoding"]

[dependencies]
lc-framework-sys = { workspace = true }
