[workspace]
resolver = "2"
members = ["lc-framework-src", "lc-framework-sys"]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/lc-framework-rs"
rust-version = "1.85"  # keep in sync with bindgen MSRV

[workspace.dependencies]
# workspace-internal crates
lc-framework = { version = "0.1", path = ".", default-features = false }
lc-framework-src = { version = "0.1", path = "lc-framework-src", default-features = false }
lc-framework-sys = { version = "0.1", path = "lc-framework-sys", default-features = false }

# crates.io third-party dependencies
bindgen = { version = "0.72", default-features = false }
cc = { version = "1.2", default-features = false }
fs_extra = { version = "1.3.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
unstable_features = "forbid"
unused_crate_dependencies = "warn"

missing_docs = "warn"

[workspace.lints.clippy]
complexity = { priority = -1, level = "warn" }
correctness = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "warn" }
style = { priority = -1, level = "warn" }
suspicious = { priority = -1, level = "warn" }

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
module_name_repetitions = "allow"

cargo = { priority = -1, level = "warn" }
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"

[package]
name = "lc-framework"
version = "0.2.0+lc.2025"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = "MPL-2.0"
rust-version = { workspace = true }

description = "High-level Rust bindings to the LC compression framework"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "compression", "encoding"]

[dependencies]
lc-framework-sys = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
