[package]
name = "lc-framework-src"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

links = "lc-src"

description = "Source files for the LC compression framework"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "compression", "encoding"]

[build-dependencies]
fs_extra = { workspace = true }
