[package]
name = "lc-framework-src"
version = "0.1.0+lc.2025"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = "BSD-3-Clause"
rust-version = { workspace = true }

links = "lc-src"

description = "Source files for the LC compression framework"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "compression", "encoding"]

exclude = ["/LC-framework/scripts", "/LC-framework/LC.svg"]

[build-dependencies]
fs_extra = { workspace = true }

[lints]
workspace = true
