[package]
name = "lc-framework-sys"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

links = "lc"

description = "Low-level Rust bindings to the LC compression framework"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["lc", "framework", "bindgen", "compression", "encoding"]

[dependencies]
lc-framework-src = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cc = { workspace = true }
